Update website content

--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -1,25 +1,93 @@
-
 body {
   overflow: scroll;
   font-family: 'Raleway', sans-serif;
   text-align: center;
+  justify-content: center;
+}
+
+.navbar-brand {
+  font-weight: 900;
+}
+
+.scrolled {
+  background-color: #FFCF56;
+  opacity: 0.9;
+
+}
+
+.btn {
+    background-color: #FFCF56;
+    border-color: #FFCF56;
+    color: #216869;
+}
+
+.wrapper {
+  min-height: 100%;
+  margin-bottom: -50px;
+}
+
+#logo-img {
+    width: 42%;
 }
 
 #page-content {
 	position: relative;
-  margin-left: 5px;
-  margin-right: 5px;
 	padding-top: 70px;
   padding-bottom: 70px;
 	min-height: 100vh;
   width: 100%;
 }
 
-#content-wrap {
-	padding-bottom: 2.5rem;    /* Footer height */
+.section-separator {
+  padding: 30px 0;
 }
 
-.footer {
+.profile-img {
+  width: 75%;
+  height: auto;
+  border-radius: 42%;
+}
+
+h1, h2 {
+  font-size: 2.5rem;
+  color: #216869;
+}
+
+p {
+  font-size: 1.125rem;
+  line-height: 2;
+}
+
+p span {
+    color: #FFCF56;
+    font-weight: 900;
+}
+
+.card {
+  border: none;
+}
+
+.footer,
+.push {
+  height: 50px;
+  color: rgba(0,0,0,.5);
+}
+
+.footer a {
+  color: #216869;
+}
+
+@media (max-width: 1200px) {
+  h1, h2 {
+    font-size: 1.5rem;
+  }
+  p {
+    font-size: 1rem;
+  }
+}
+
+
+/* .footer {
   text-align: left;
   position: absolute;
 	height: 2.5rem;
@@ -29,4 +97,4 @@ body {
 	left: 0;
 	right: 0;
 	margin-bottom: 0;
-}
+} */
